Finally connected to our database

--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,9 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "tedious": "^11.4.0"
+  },
   "devDependencies": {}
 }
